--- a/pr-preview/pr-83/resources/homegrown/data-clinic-for-general.html
+++ b/pr-preview/pr-83/resources/homegrown/data-clinic-for-general.html
@@ -143,6 +143,7 @@ ul.task-list li input[type="checkbox"] {
   <li><a href="#measurement-techniques" id="toc-measurement-techniques" class="nav-link" data-scroll-target="#measurement-techniques">Measurement techniques</a></li>
   <li><a href="#words-of-wisdom-lessons-learnt" id="toc-words-of-wisdom-lessons-learnt" class="nav-link" data-scroll-target="#words-of-wisdom-lessons-learnt">Words of wisdom &amp; lessons learnt</a></li>
   <li><a href="#contact-details-for-the-uclh-data-clinic" id="toc-contact-details-for-the-uclh-data-clinic" class="nav-link" data-scroll-target="#contact-details-for-the-uclh-data-clinic">Contact details for the UCLH Data Clinic</a></li>
+  <li><a href="#acknowledgements" id="toc-acknowledgements" class="nav-link" data-scroll-target="#acknowledgements">Acknowledgements</a></li>
   </ul>
 <div class="toc-actions"><div><i class="bi bi-github"></i></div><div class="action-links"><p><a href="https://github.com/uclhal/uclhal/edit/main/resources/homegrown/data-clinic-for-general.qmd" class="toc-action">Edit this page</a></p><p><a href="https://github.com/uclhal/uclhal/issues/new" class="toc-action">Report an issue</a></p></div></div></nav>
     </div>
@@ -232,7 +233,7 @@ ul.task-list li input[type="checkbox"] {
 </li>
 <li>Enhances understanding of the data that is available from EHRS &amp; how it will be useful for their project aims<br>
 </li>
-<li>Ensures the data provided is in a format that is useful to the Requestor and sensative to their data analytic skills (e.g.&nbsp;there is no point providing a 10,000 row spreadsheet to someone who struggles to use Excel)<br>
+<li>Ensures the data provided is in a format that is useful to the Requestor and sensitive to their data analytic skills (e.g.&nbsp;there is no point providing a 10,000 row spreadsheet to someone who struggles to use Excel)<br>
 </li>
 <li>Overall makes it easier to get the data needed to complete audit/QIP/service evaluations (thereby increasing the number of projects completed, departmental performance and eventually improving patient care)</li>
 </ul>
@@ -296,8 +297,8 @@ ul.task-list li input[type="checkbox"] {
 <h3 class="anchored" data-anchor-id="data-clinic-core-team">Data Clinic core team</h3>
 <p>Data Fellow: critical care practitioner (e.g.&nbsp;Doctor, nurse) who has knowledge of the day-to-day working of the Critical Care unit.<br>
 - So far this has been an SHO-level doctor with some data science acumen who has a 1/3rd to 2/3rd split job role between Data Clinic and clinical work in ICU. However this could reasonably done by any medical professional with time/interest.</p>
-<p>Data Analyst: a data scientist (or similar) who has experince and knowledge of the EHRS system and how to extract data from it. Clinical knowledge is not necessary as it should be provided by the Data Fellow.</p>
-<p>Project supervisor: a senior departmental figure (e.g.&nbsp;consultant) who is able to provide guidance/direction to the project, but is perhapos not involved in the day t day running. Benefits from some knowledge of data/Audit/QI.</p>
+<p>Data Analyst: a data scientist (or similar) who has experince and knowledge of the EHRS system and how to extract data from it. Clinical knowledge is not necessary as that should be provided by the Data Fellow.</p>
+<p>Project supervisor: a senior departmental figure (e.g.&nbsp;consultant) who is able to provide guidance/direction to the project, but is perhaps not involved in the day t day running. Benefits from some knowledge of data/Audit/QI.</p>
 </section>
 <section id="how-are-requests-for-data-recieved" class="level3">
 <h3 class="anchored" data-anchor-id="how-are-requests-for-data-recieved">How are requests for data recieved?</h3>
@@ -333,7 +334,7 @@ ul.task-list li input[type="checkbox"] {
 <p>Following this meeting, the Data Clinic team will prepare the data extraction (or a limited subset of the full extraction).</p>
 <p>Once this is done, the Data Clinic team meet again with the Requestor to show them the data extraction.<br>
 - If the Requestor is happy with this data, the Data Clinic team then proceed to a full data extraction and deliver it to the Requestor.<br>
-- If the Requestor are not satisfied, the extraction is revised according to the feedback received. Further meetings are then arranged with after each round of extraction until the Requestor until the data provided is adequate.</p>
+- If the Requestor are not satisfied, the extraction is revised according to the feedback received. Further meetings are then arranged with the Requestor after each round of extraction, until the data provided is adequate.</p>
 <p>(see the below flowchart for a graphical representation of this process)</p>
 <div class="cell">
 <div class="cell-output-display">
@@ -410,9 +411,14 @@ As well as identifing areas that went well, these meetings provide a forum for D
 <section id="contact-details-for-the-uclh-data-clinic" class="level1">
 <h1>Contact details for the UCLH Data Clinic</h1>
 <p>If you have questions on the above, or would like to discuss further, please email one of the individuals below (Dr Campbell will be the 1st point of call for most items).</p>
-<p>Dr Ruaraidh Campbell: Lead Data Fellow (ruaraidh.campbell@nhs.net)<br>
+<p>Dr Ruaraidh Campbell: Lead Data Fellow for Data Clinic (ruaraidh.campbell@nhs.net)<br>
 Humayra Chowdhury: BI analyst (humayra.chowdhury@nhs.net)<br>
 Dr Tim Bonnici: Data Lead for Critical Care (t.bonnici@nhs.net)</p>
+</section>
+<section id="acknowledgements" class="level1">
+<h1>Acknowledgements</h1>
+<p>The Data Clinic has only been possible due to the contribution of numerous indivduals in addition to those listed above. We would like to acknowledge the time and effort that have put into this project.</p>
+<p>Data Fellows (Past and Present): Dr Conor Foley [Lead Fellow for Data Clinic 2021/2022], Dr Dan Stein, Dr Hrisheekesh Vaidya, Dr Sarah Vaughan Business Intelligence Partners (Past and Present): Tracey Crissell, David Egan</p>
 
 
 </section>
