--- a/pr-preview/pr-83/resources/homegrown/data-clinic-for-general.html
+++ b/pr-preview/pr-83/resources/homegrown/data-clinic-for-general.html
@@ -268,13 +268,13 @@ ul.task-list li input[type="checkbox"] {
 </ol></li>
 </ol>
 <p>Listed below is our strategy for measuring the impact of the Data Clinic &amp; the reasons behind this approach. This can be copied directly, or adapted to your local environment. We chose 6 key measurements to focus on collecting to avoid overburdening the team. In reality, it may be possible to collect more than this.</p>
-<p>Outcome measures:</p>
+<p><strong>Outcome measures:</strong></p>
 <ol type="1">
 <li>Requestor satisfaction with the data delivered<br>
 </li>
 <li>Requestor satisfaction with the Data Clinic process</li>
 </ol>
-<p>Process measures:</p>
+<p><strong>Process measures:</strong></p>
 <ol start="3" type="1">
 <li>Time taken to deliver the data<br>
 </li>
@@ -282,7 +282,7 @@ ul.task-list li input[type="checkbox"] {
 </li>
 <li>Qualitative feedback on the Data Clinic experience</li>
 </ol>
-<p>Balancing measures</p>
+<p><strong>Balancing measures:</strong></p>
 <ol start="6" type="1">
 <li>Feedback from the Data Clinic team on their experience</li>
 </ol>
@@ -364,18 +364,14 @@ linkStyle default stroke: black;
 <section id="measurement-techniques" class="level1">
 <h1>Measurement techniques</h1>
 <p>To collect the data on the Outcome/Process/Balancing measures above, we used the following techniques:</p>
-<ol type="1">
-<li>Feedback surveys sent to Requestors</li>
-</ol>
+<p><strong>1) Feedback surveys sent to Requestors</strong></p>
 <blockquote class="blockquote">
 <p>2 surveys were used:<br>
 1. “Immediate” feedback survey. This was sent to Requestors immediately after the request had been served. This focused on their experience of coming through the Data Clinic - and if they were satisfied with the process.<br>
-2. “Delayed” feedback survey. This was sent to Requestors weeks-to-months later, after the Requestors have had time to use the data for their project. This focused on their satisfaction with the data delivered - as by then they have had the experience of using the data towards their project goals, so can make a judgement on its true usefulness.<br>
+2. “Delayed” feedback survey. This was sent to Requestors weeks-to-months later, after the Requestors have had time to use the data for their project. This focused on their satisfaction with the data delivered. By this point they will have had the opportunity to use the data for the purposes of their project, so can make a judgement on its true usefulness.<br>
 These feedback surveys also contain questions on other metrics our team are interested in (e.g.&nbsp;what barriers to using data did the Data Clinic help overcome)</p>
 </blockquote>
-<ol start="2" type="1">
-<li>After-Action Review meetings between Data Clinic team members</li>
-</ol>
+<p><strong>2) After-Action Review meetings between Data Clinic team members</strong></p>
 <blockquote class="blockquote">
 <p>These meetings are performed approximately every 3 months. We sit together and review the completed projects during that time.<br>
 We start by reviewing the quantitative metrics for the projects (e.g.&nbsp;how long did it take).<br>
@@ -387,16 +383,13 @@ As well as identifing areas that went well, these meetings provide a forum for D
 <section id="words-of-wisdom-lessons-learnt" class="level1">
 <h1>Words of wisdom &amp; lessons learnt</h1>
 <p>Since its inception, the Data Clinic has been a process of constant learning and development. We have shared below some of the lessons we have learnt, which may be relevant to your implementation.</p>
-<ol type="1">
-<li>Help with project methodology</li>
-</ol>
+<p><strong>1. Help with project methodology</strong></p>
 <p>The process of coming through Data Clinic often reveals that projects are not are thoroughly considered as they first appear (and this applies for all grades/seniority of Requestors!) or that the realities of the data available leads to significant reformulation of the project aims/methodology.</p>
-<p>It is therefore been of enormous help to us to partner with Audit/QI/Methodology leads and experts within our department. We can now “refer” projects to these individuals if they need extra methodology support. Once they have been through this process, they come back to us with much clearer aims and reasoned data requests.</p>
-<ol start="2" type="1">
-<li>Types of requests accepted</li>
-</ol>
+<p>One of the strengths of the Data Clinic has been the opportunity for the Requestor to meet face-to-face with the Data Clinic team to discuss their project before starting the data extraction. This meeting often reveals issues with the project’s inclusion criteria or methodology - something the Data Fellow is often able to spot using their clinical experience. Often these issues can be resolved in this first meeting which makes the subsequent data extraction more straightforward for the data analyst.</p>
+<p>However, there are occasions where it is obvious the project needs further consideration before progressing. It has therefore been enormous helpful for us to partner with Audit/QI/Methodology leads and experts within our department. We can now “refer” projects to these individuals if they need extra methodology support. Once they have been through this process, they come back to us with much clearer aims and considered data requests.</p>
+<p><strong>2. Types of requests accepted</strong></p>
 <p>We initially limited the scope of the Data Clinic to just serving requests for Audit or QI projects.</p>
-<p>This served useful for limiting our workload while we developed our service. However, it quickly became apparent that many requests for projects that had clear potential benefits for the department did not fall into the category of Audit/QI.</p>
+<p>This proved useful for limiting our workload while we developed our service. However, it quickly became apparent that many requests for projects that had clear potential benefits for the department did not fall into the category of Audit/QI.</p>
 <p>As a result, we expended the scope of the projects we serve to:<br>
 - Audits<br>
 - QI<br>
@@ -407,18 +400,23 @@ As well as identifing areas that went well, these meetings provide a forum for D
 - Others (at the discretion of whether the Data Clinic team feels it is reasonable)</p>
 <p>This has increased the numbers of projects we serve and has certainly increased the usefulness of the Data Clinic to the department.</p>
 <p>However, it does have the downside of increasing workload, so perhaps caution is warranted when first starting.</p>
+<p><strong>3. Inbalances between the requested data and the data that is useful</strong></p>
+<p>One of the strengths of electronic health records is the ability to easily collect large volumes of data. However, we have found this can present unexpected challenges for clinical staff completing projects.</p>
+<p>Requestors can often ask for more data than they need or can handle. This can be requesting superfluous variables which are not relevant to the project’s aims or analyses. Alternatively, the volume of data produced can be overwhelming for Requestors who are used to smaller, manually collected datasets - especially for those with limited data science skills.</p>
+<p>It is therefore important to establish early on what variables are truly important for the project and to try to limit the extraction to these. It is usually straightforward to add variables to existing requests if it later becomes apparent that extra data is needed. This ensures that the datasets produced are relevant to their purpose - limiting information overload for the Requestors and misuse of the valuable data analyst’s time in extracting unnecessary data.</p>
 </section>
 <section id="contact-details-for-the-uclh-data-clinic" class="level1">
 <h1>Contact details for the UCLH Data Clinic</h1>
 <p>If you have questions on the above, or would like to discuss further, please email one of the individuals below (Dr Campbell will be the 1st point of call for most items).</p>
-<p>Dr Ruaraidh Campbell: Lead Data Fellow for Data Clinic (ruaraidh.campbell@nhs.net)<br>
-Humayra Chowdhury: BI analyst (humayra.chowdhury@nhs.net)<br>
-Dr Tim Bonnici: Data Lead for Critical Care (t.bonnici@nhs.net)</p>
+<p><strong>Dr Ruaraidh Campbell</strong>: Lead Data Fellow for Data Clinic (ruaraidh.campbell@nhs.net)<br>
+<strong>Humayra Chowdhury</strong>: BI analyst (humayra.chowdhury@nhs.net)<br>
+<strong>Dr Tim Bonnici</strong>: Data Lead for Critical Care (t.bonnici@nhs.net)</p>
 </section>
 <section id="acknowledgements" class="level1">
 <h1>Acknowledgements</h1>
 <p>The Data Clinic has only been possible due to the contribution of numerous indivduals in addition to those listed above. We would like to acknowledge the time and effort that have put into this project.</p>
-<p>Data Fellows (Past and Present): Dr Conor Foley [Lead Fellow for Data Clinic 2021/2022], Dr Dan Stein, Dr Hrisheekesh Vaidya, Dr Sarah Vaughan Business Intelligence Partners (Past and Present): Tracey Crissell, David Egan</p>
+<p><strong>Data Fellows (Past and Present)</strong>: Dr Conor Foley [Lead Fellow for Data Clinic 2021/2022], Dr Dan Stein, Dr Hrisheekesh Vaidya, Dr Sarah Vaughan<br>
+<strong>Business Intelligence Partners</strong> (Past and Present): Tracey Crissell, David Egan</p>
 
 
 </section>
